03-08-2005 Juan Jesus Ojeda Croissier <juanje_@_interactors.coop>
	* lib/part.py: Added this new lib for the partitioning stuff.
	* frontend/glade/liveinstaller.glade: Addes fullname GtkEntry and some fixs.
	* lib/validation.py: Changed the output of check_password().
	* frontend/Gnome.py:
		- Extraxted the Gparted stuff to lib/part.py.
		- Started the migration some methods to callbacks
		- Some little stuff more

03-08-2005 Javier Carranza <javier.carranza_@_interactors.coop>
	* ../gparted*: gparted package with hacks to embed it into
	ubuntu-express and Guadalinex live_installer.
	* frontend/Gnome.py: sockets & process implementation to join gparted embedding.

03-08-2005 Antonio Olmo <aolmo_@_emergya.info>
	* lib/validation.py finished.
	* "README.txt" renamed to "README".
	* Doc updated.

02-08-2005 Javier Carranza <javier.carranza_@_interactors.coop>
	* debian/*: ubuntu-express debian package.

29-07-2005 Antonio Olmo <aolmo_@_emergya.info>
	* ../README.txt: updated.
	* part/peez2/: customized parted library added, README finished.
	* lib/validation.py: last validation done (for the name of the host).

29-07-2005 Javier Carranza <javier.carranza_@_interactors.coop>
	* frontend/*:
		- Added Exceptions to export installer control to backend.
		- Added splash images and text during installation process.
		- Added Gnome.py example script to use the module.
		- Added some documentation.

28-07-2005 Antonio Olmo <aolmo_@_emergya.info>
	* part/: partitioning stuff.
	* part/peez2/: partition wizard (currently being tested).
	* ../README.txt: brief explanations for beginners.

27-07-2005 Antonio Olmo <aolmo_@_emergya.info>
	* doc/: slightly improved with epydoc.
	* lib/validation.py: (almost?) finished.

27-07-2005 Javier Carranza <javier.carranza_@_interactors.coop>
	* frontend/glade:
		- Added some methods.
		- Added fullscren featured mode.
		- Added text screens for the installation process.
		- Added styles.
		- Deleted welcome screen.